fixed campaign list popover triggering collapse

--- a/app/assets/stylesheets/contracts.css.scss
+++ b/app/assets/stylesheets/contracts.css.scss
@@ -9,10 +9,9 @@ $contractHeight: 65px;
 }
 
 .contract {
-  min-height: $contractHeight;
+  background-color: #f3f5f6;
   border: 1px solid #ccc;
   border-top-width: 0;
-  background-color: #f3f5f6;
   @include transition( margin 0.10s );
 
   &:hover {
@@ -43,6 +42,7 @@ $contractHeight: 65px;
   .flights {
     display: none;
     border-top: 1px solid #e0e0e0;
+    background-color: #FFF;
     table {
       margin-bottom: 0;
 
@@ -62,6 +62,7 @@ $contractHeight: 65px;
 
 .contract-header {
   cursor: pointer;
+  height: $contractHeight;
 }
 
 .payout {
